Un-ignore CV and cover letter files in .gitignore
Comment out ignore patterns for current_cv_coverletter and export_cv_cover_letter
so exported .docx, .pdf and job_info.json files can be tracked in the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -48,9 +48,9 @@ Thumbs.db
 # Logs
 *.log
 logs/
-
+.claude
 # CV and Cover Letter Documents (Personal Information)
-current_cv_coverletter/*.docx
-export_cv_cover_letter/**/*.docx
-export_cv_cover_letter/**/*.pdf
-export_cv_cover_letter/**/job_info.json
+# current_cv_coverletter/*.docx
+# export_cv_cover_letter/**/*.docx
+# export_cv_cover_letter/**/*.pdf
+# export_cv_cover_letter/**/job_info.json
