refactor: streamline development environment and cleanup legacy files
- Update devcontainer configuration and dependencies
- Enhance MCP server configuration with Docker MCP gateway
- Add comprehensive Makefile automation for job search workflows
- Remove deprecated MS SQL JDBC jar and Kerberos config
- Remove sample CV/cover letter exports from October 2025
- Update .gitignore patterns for better file organization
- Remove legacy workflow documentation (replaced by create2.md)

This refactor improves the development environment setup and removes
old application materials to maintain a cleaner repository structure.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,12 +2,14 @@ FROM python:3.14.0-slim-bookworm
 
 USER root
 
-ENV http_proxy=http://proxy.police.tas.gov.au:8080 \
-    https_proxy=http://proxy.police.tas.gov.au:8080 \
-    PYTHONDONTWRITEBYTECODE=1 \
+# Removed proxy configuration - only set if needed on your network
+# ENV http_proxy=http://proxy.police.tas.gov.au:8080 \
+#     https_proxy=http://proxy.police.tas.gov.au:8080
+
+ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONBUFFERED=1
 
-COPY kbr5.conf /etc/krb5.conf
+#COPY kbr5.conf /etc/krb5.conf
 COPY config/fancygit/app_config /tmp
 COPY requirements.txt /tmp
 
@@ -15,9 +17,10 @@ COPY requirements.txt /tmp
 RUN apt-get update && apt-get install -y --no-install-recommends \
     curl git wget build-essential fontconfig make htop \
     krb5-user libkrb5-dev unixodbc unixodbc-dev \
-    gnupg2 ca-certificates openssl corkscrew odbcinst \
-    openssh-client libmemcached-dev jq sqlite3 redis-tools sudo && \
-    apt-get clean && rm -rf /var/lib/apt/lists/*
+    gnupg2 ca-certificates openssl \
+    openssh-client libmemcached-dev jq sudo \
+    ffmpeg gcc libasound2-dev libasound2-plugins libportaudio2 portaudio19-dev pulseaudio pulseaudio-utils python3-dev \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install latest stable Node.js
 RUN curl -fsSL https://deb.nodesource.com/setup_lts.x -o /tmp/nodesource_setup.sh && \
@@ -27,7 +30,14 @@ RUN curl -fsSL https://deb.nodesource.com/setup_lts.x -o /tmp/nodesource_setup.s
     npm install -g @anthropic-ai/claude-code && \
     apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/nodesource_setup.sh
 
-RUN pip install --no-cache-dir -r /tmp/requirements.txt
+
+# Install uv Python package manager
+RUN curl -LsSf https://astral.sh/uv/install.sh | sh && \
+    mv /root/.local/bin/uv /usr/local/bin/ && \
+    mv /root/.local/bin/uvx /usr/local/bin/
+
+RUN uvx voice-mode-install
+RUN uv pip install --system --no-cache-dir -r /tmp/requirements.txt
 
 # Create vscode user
 RUN useradd -m -s /bin/bash vscode && \
