fix: restore correct workflow id in greenfield-fullstack.yaml
Restored workflow id from 'ç' to 'greenfield-fullstack'.
This was an accidental change that was included in the previous documentation restructuring commit.

--- a/.bmad-core/workflows/greenfield-fullstack.yaml
+++ b/.bmad-core/workflows/greenfield-fullstack.yaml
@@ -1,6 +1,6 @@
 # <!-- Powered by BMAD™ Core -->
 workflow:
-  id: ç
+  id: greenfield-fullstack
   name: Greenfield Full-Stack Application Development
   description: >-
     Agent workflow for building full-stack applications from concept to development.
