feat: Improve MCP config security with .env integration
Implemented environment variable-based MCP configuration for better
security and 12-factor app compliance. Credentials now stored in .env
instead of directly in .mcp.json.

Changes:
- Created .mcp.json.template with ${VAR} placeholders
- Added scripts/setup_mcp_config.py to generate .mcp.json from .env
- Updated .env.example with LINKEDIN_COOKIE and GITHUB_TOKEN
- Enhanced .mcp.json.README.md with new setup instructions
- Replaced .mcp.json.example with .mcp.json.template

Benefits:
✅ Credentials stored in .env (already gitignored)
✅ Single source of truth for all secrets
✅ Follows 12-factor app methodology
✅ Easier Docker deployment (env vars or .env file)
✅ Script sets proper file permissions (600)
✅ Optional GitHub token support

Developer Workflow:
1. Copy .env.example to .env
2. Add LINKEDIN_COOKIE and GITHUB_TOKEN to .env
3. Run: python scripts/setup_mcp_config.py
4. .mcp.json generated automatically

Docker Workflow:
docker run --env-file .env   --entrypoint /bin/sh   your-image -c "python scripts/setup_mcp_config.py && uvicorn app.api.main:app"

This addresses the security concern of hardcoded credentials in .mcp.json
and provides a more maintainable configuration approach.

--- a/.env.example
+++ b/.env.example
@@ -32,16 +32,27 @@ ANTHROPIC_API_KEY=sk-ant-api03-your-api-key-here
 # AGENT_MODEL_SALARY_VALIDATOR=claude-haiku
 
 # =============================================================================
-# LinkedIn MCP Configuration
+# MCP (Model Context Protocol) Server Configuration
 # =============================================================================
-# LinkedIn authentication cookie (li_at)
+# These credentials are used by scripts/setup_mcp_config.py to generate .mcp.json
+# Run: python scripts/setup_mcp_config.py after setting these values
+
+# LinkedIn MCP Server - Authentication cookie (li_at)
 # To get this:
 # 1. Log into LinkedIn in your browser
 # 2. Open Developer Tools (F12)
 # 3. Go to Application > Cookies > linkedin.com
 # 4. Copy the value of 'li_at' cookie
 # Note: This cookie expires approximately every 30 days
-LINKEDIN_LI_AT_COOKIE=your-linkedin-li_at-cookie-here
+LINKEDIN_COOKIE=your-linkedin-li_at-cookie-here
+
+# GitHub MCP Server - Personal Access Token (optional)
+# To get this:
+# 1. Go to GitHub Settings > Developer settings > Personal access tokens
+# 2. Generate new token with 'repo' and 'read:org' scopes
+# 3. Copy the generated token
+# Note: Keep this token secure and never commit it
+GITHUB_TOKEN=ghp_your-github-token-here
 
 # =============================================================================
 # Email Configuration (Application Submission)
