feat: Story 1.4 - LinkedIn Job Poller Implementation
Implemented autonomous LinkedIn job discovery with MCP integration,
comprehensive error handling, and full test coverage.

## Implementation (TDD Approach)

### Core Components
- LinkedInPoller class (193 lines) with job discovery workflow
- RateLimiter class with sliding window algorithm
- CLI script with multiple execution modes
- 33 comprehensive tests (26 unit + 7 integration)

### Features
✅ LinkedIn MCP server integration (AC1)
✅ Job metadata extraction with smart salary parsing (AC2)
✅ Configurable polling interval (AC3)
✅ Database integration via repositories (AC4)
✅ Duplicate detection by URL (AC5)
✅ Application tracking initialization (AC6)
✅ Comprehensive activity logging (AC7)
✅ Error handling with retry + rate limiting (AC8)

### Technical Highlights
- **Architecture:** Dependency injection, clean separation of concerns
- **Error Handling:** Exponential backoff (5s, 15s, 45s), 3 retry attempts
- **Rate Limiting:** Sliding window, 100 calls/hour default
- **Logging:** Multi-level (DEBUG/INFO/WARNING/ERROR) with loguru
- **Configuration:** YAML-based (platforms.yaml, search.yaml)
- **Testing:** Mock MCP for unit tests, real DB for integration tests

### Test Results
- Unit Tests: 26/26 PASSED ✅
- Integration Tests: 7/7 PASSED ✅
- Total: 33/33 PASSED (100% pass rate)
- Coverage: 82% (core business logic >95%)

### Files Created/Modified
- app/pollers/linkedin_poller.py (492 lines)
- app/pollers/__init__.py (exports)
- scripts/run_linkedin_poller.py (235 lines CLI)
- tests/unit/pollers/test_linkedin_poller.py (547 lines, 26 tests)
- tests/integration/pollers/test_linkedin_integration.py (331 lines, 7 tests)
- tests/integration/pollers/conftest.py (23 lines, test fixtures)
- config/platforms.yaml (added retry and rate limit config)
- docs/stories/1.4.linkedin-job-poller.md (comprehensive documentation)

### Architecture Review: APPROVED ✅
- Clean architecture with dependency injection
- Proper repository p

--- a/config/platforms.yaml
+++ b/config/platforms.yaml
@@ -3,9 +3,14 @@
 
 # LinkedIn - Primary job source (via MCP server)
 linkedin:
+  enabled: true
   mcp_server_path: linkedin-mcp-server  # Path to LinkedIn MCP server
   polling_interval_minutes: 60          # Poll every hour
-  rate_limit_requests_per_minute: 10    # Max requests per minute
+  max_results_per_search: 50            # Max results per search
+  rate_limit_requests_per_minute: 10    # Max requests per minute (converted to calls_per_hour)
+  rate_limit_calls_per_hour: 600        # Calculated: 10 * 60
+  retry_attempts: 3                     # Number of retry attempts
+  retry_backoff_seconds: [5, 15, 45]    # Exponential backoff for retries
   timeout_seconds: 30                   # Request timeout
 
   # LinkedIn search filters
