--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,6 +86,8 @@ ignore = [
 
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
+"scripts/*.py" = ["E402"]  # Allow imports after sys.path manipulation
+"tests/**/*.py" = ["B017"]  # Allow pytest.raises(Exception) in tests
 
 [tool.mypy]
 python_version = "3.11"
