feat: Story 3.1 - SEEK Job Poller implementation
Implement SEEK job poller with web scraping capabilities using BeautifulSoup.
Follows established poller patterns from LinkedInPoller with SEEK-specific features.

Features implemented:
- SEEKPoller class with web scraping using BeautifulSoup
- SEEK-specific salary parsing (annual, daily, hourly rates)
- Location normalization for Australian formats
- Posting date parsing ("2d ago", "1w ago", absolute dates)
- Rate limiting (50 requests/hour)
- Random delays between requests (2-5s)
- Retry logic with exponential backoff
- Pagination support (up to 5 pages per search)
- Duplicate detection via job URL
- Database integration (jobs + application_tracking)
- Comprehensive error handling
- Graceful shutdown on SIGTERM/SIGINT

Quality metrics:
- 28 unit tests passing (100% pass rate)
- 75% code coverage on seek_poller.py
- All quality gates passed (ruff, black, mypy)
- Follows TDD methodology (RED → GREEN → REFACTOR)

Configuration:
- Updated config/search.yaml with SEEK section
- Updated config/platforms.yaml with SEEK settings
- Added beautifulsoup4 and requests dependencies

Acceptance criteria met:
- AC 1: Web scraping implementation ✓
- AC 2: Job metadata extraction ✓
- AC 3: SEEK-specific format handling ✓
- AC 4: Rate limiting ✓
- AC 5: Database integration ✓
- AC 6: Error handling ✓
- AC 7: Configuration ✓
- AC 8: Metrics and logging ✓
- AC 9: Testing (75% coverage) ✓
- AC 10: Scheduling integration ready ✓

Files changed:
- app/pollers/seek_poller.py (new, 587 lines)
- tests/unit/pollers/test_seek_poller.py (new, 436 lines)
- config/platforms.yaml (updated SEEK section)
- config/search.yaml (added SEEK section)
- pyproject.toml (added dependencies)

Story: docs/stories/3.1.seek-job-poller.md
Epic: Epic 3 - Duplicate Detection

--- a/config/platforms.yaml
+++ b/config/platforms.yaml
@@ -19,14 +19,18 @@ linkedin:
     job_type: Contract
     remote: true
 
-# SEEK - Australian job board (Phase 3 implementation)
+# SEEK - Australian job board
 seek:
+  enabled: true
   base_url: https://www.seek.com.au
-  polling_interval_minutes: 120   # Poll every 2 hours
-  timeout_seconds: 30             # Request timeout
-  # Phase 3: Add Playwright scraper configuration
-  # scraper_enabled: false
-  # max_pages: 5
+  polling_interval_minutes: 60            # Poll every hour (same as LinkedIn)
+  rate_limit_requests_per_hour: 50        # Conservative rate limit
+  delay_between_requests_seconds: [2, 5]  # Random delay range between requests
+  user_agent: "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36"
+  max_pages_per_search: 5                 # Limit pagination depth
+  retry_attempts: 3                       # Number of retry attempts on failure
+  retry_backoff_seconds: [5, 15, 45]      # Exponential backoff for retries
+  timeout_seconds: 30                     # Request timeout
 
 # Indeed - Global job board (Phase 3 implementation)
 indeed:
