feat: Story 3.2 - Indeed Job Poller implementation
Implements Indeed job discovery through web scraping following SEEK poller patterns:

Features:
- Web scraping of Indeed job listings with BeautifulSoup
- Two-step scraping: search results → job detail pages
- Sponsored result filtering (organic jobs only)
- Salary parsing: annual, hourly, and estimate formats
- Posting date parsing: relative and absolute formats
- Rate limiting: 50 requests/hour with random delays (2-5s)
- Retry logic: exponential backoff (5s, 15s, 45s)
- Duplicate detection via job URL
- Database integration with JobsRepository
- Application tracking with status='discovered'
- Comprehensive metrics tracking

Testing:
- 45 unit tests with mocked dependencies
- 9 integration tests with real database
- 88% code coverage for Indeed poller
- All tests passing

Configuration:
- Indeed search configuration in config/search.yaml
- Indeed platform settings in config/platforms.yaml
- Rate limiting, retry, and delay settings

Follows existing SEEKPoller patterns and architecture.

--- a/config/search.yaml
+++ b/config/search.yaml
@@ -68,3 +68,12 @@ seek:
     - data engineering
   location: Australia
   exclude_keywords: []  # Optional filtering
+
+# Indeed - Global job board configuration
+indeed:
+  enabled: true
+  search_terms:
+    - data engineer
+    - data engineering
+  location: Australia
+  exclude_keywords: []  # Optional filtering
