--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,9 @@ fuzzywuzzy>=0.18.0
 python-levenshtein>=0.23.0
 scikit-learn>=1.3.2
 
+# Browser Automation
+playwright>=1.40.0
+
 # Development Dependencies
 pytest>=7.4.3
 pytest-asyncio>=0.21.1
